--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -54,6 +54,7 @@
     "reviewed_book": "%s reviewed book: %s",
     "accepted_book": "%s accepted book: %s",
     "request_edit_book": "%s request edit book: %s",
+    "approve_returning_book": "%s approve returning book: %s",
     "approve_request_update_book": "%s approve request update book: %s",
     "delete_request_edit_book": "%s delete request edit book: %s"
   },
