--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -57,7 +57,8 @@
     "approve_returning_book": "%s approve returning book: %s",
     "approve_request_update_book": "%s approve request update book: %s",
     "delete_request_edit_book": "%s delete request edit book: %s",
-    "waiting_book_borrowing": "%s waiting book borrowing %s"
+    "waiting_book_borrowing": "%s waiting book borrowing %s",
+    "set_role": "%s change your role : %s"
   },
   "review": {
     "upvoted": "Your review was upvoted by %s",
